--- a/tox.ini
+++ b/tox.ini
@@ -2,40 +2,14 @@
 envlist = py{27,35,36}-{pymysql,mysqlclient}
 
 [testenv]
-whitelist_externals = poet
+deps =
+    -rtests-requirements.txt
+    pymysql: pymysql
+    mysqlclient: mysqlclient
+commands = py.test tests/ -sq
 
-[testenv:py27-pymysql]
-commands:
-    pip install -U pip
-    poet install -f mysql-python -f pgsql -q
-    py.test tests/ -sq
-
-[testenv:py27-mysqlclient]
-commands:
-    pip install -U pip
-    poet install -f mysql -f pgsql -q
-    py.test tests/ -sq
-
-[testenv:py35-pymysql]
-commands:
-    pip install -U pip
-    poet install -f mysql-python -f pgsql -q
-    py.test tests/ -sq
-
-[testenv:py35-mysqlclient]
-commands:
-    pip install -U pip
-    poet install -f mysql -f pgsql -q
-    py.test tests/ -sq
-
-[testenv:py36-pymysql]
-commands:
-    pip install -U pip
-    poet install -f mysql-python -f pgsql -q
-    py.test tests/ -sq
-
-[testenv:py36-mysqlclient]
-commands:
-    pip install -U pip
-    poet install -f mysql -f pgsql -q
-    py.test tests/ -sq
+[testenv:flake8]
+basepython=python
+deps=flake8
+commands=
+    flake8 orator
